--- a/web/art/art.css
+++ b/web/art/art.css
@@ -1,17 +1,17 @@
 
-ul.gallery {
+.gallery {
 	list-style-type: none;
 	text-align: center;
 }
 
-ul.gallery li {
+.gallery li {
 	display: block;
 	float: left;
 	padding: 0;
 	margin: 1em;
 }
 
-ul.gallery a {
+.gallery a {
 	font-size: 0.8em;
 	display: block;
 	margin: 0;
@@ -20,22 +20,23 @@ ul.gallery a {
 	height: 220px;
 }
 
-ul.gallery a img {
+.gallery a img {
 	display: block;
 	margin: 0 0 4px 0;
 	padding: 2px;
 	border: 1px solid #b6e4ff;
 }
 
-ul.gallery a:visited img {
+.gallery a:visited img {
 	border: 1px solid #ed7de4;
 }
 
-ul.gallery a:hover img, ul.gallery a:active img {
+.gallery a:hover img,
+.gallery a:active img {
 	border: 1px solid #ffffff;
 }
 
-ul.gallery img {
+.gallery img {
 	display: block;
 	border: none;
 	padding: 0;
@@ -45,28 +46,22 @@ ul.gallery img {
 
 
 
-ul.galleries {
+.galleries {
 	list-style-type: none;	
 }
 
-ul.galleries li {
+.galleries li {
 	display: block;
 	background: #434343 url('/style/boxbg.jpg') no-repeat 50% 0;	
 }
 
-#main-content ul.galleries li {	
-	width: 46%;
-	margin: 0 2% 1em 2%;
-	padding: 0;
-	float: left;
-}
-
-#secondary-content ul.galleries li {
+#secondary-content .galleries li {
 	margin: 1em;
 	padding: 0;
 }
 
-ul.galleries li a, ul.galleries li span {
+.galleries li a,
+.galleries li span {
 	display: block;
 	min-height: 44px;
 	border: 1px solid;
@@ -74,19 +69,20 @@ ul.galleries li a, ul.galleries li span {
 	padding: 5px 5px 5px 60px;
 }
 
-ul.galleries li a {
+.galleries li a {
 	border-color: #b6e4ff;
 }
 
-ul.galleries li span {
+.galleries li span {
 	border-color: #ffffff;
 }
 
-ul.galleries li a:visited {
+.galleries li a:visited {
 	border: 1px solid #ed7de4;
 }
 
-ul.galleries li a:hover, ul.social li a:active {
+.galleries li a:hover,
+.social li a:active {
 	border: 1px solid #ffffff;
 }
 
