--- a/web/style/screen.css
+++ b/web/style/screen.css
@@ -1,8 +1,8 @@
 /* General */
 body {
 	background: #424242 url('bg.jpg') no-repeat top left;
-	margin: 0;
-	padding: 0 0 0 160px;
+	margin: 1rem;
+	padding: 0;
 	font-family: "Verdana", "Arial", sans-serif;
 	font-size: 0.8em;
 	color: #ffffff;
@@ -31,7 +31,7 @@ h2 {
 	font-size: 1.5em;
 	font-family: "Trebuchet MS", "Verdana", sans-serif;
 	font-weight: normal;
-	text-shadow: #000000 0px 1px 6px;
+	text-shadow: #000000 0 1px 6px;
 	padding: 0 0 0.1em 0;
 	margin: 0 0 0.3em 0;
 	border-bottom: 1px solid #b6e4ff;	
@@ -41,7 +41,7 @@ h3 {
 	font-size: 1.3em;
 	font-family: "Trebuchet MS", "Verdana", sans-serif;
 	font-weight: normal;
-	text-shadow: #000000 0px 1px 6px;
+	text-shadow: #000000 0 1px 6px;
 	padding: 0 0 0.1em 0;
 	margin: 0 0 0.3em 0;
 	border-bottom: 1px dotted #b6e4ff;	
@@ -66,47 +66,25 @@ a:hover, a:active {
 
 
 /* Header */
-#header {
-	margin: 0 0 40px 0;
-	padding: 75px 0 0 0;	
-}
-
 #header h1 {
-	font-size: 2.5em;
+	box-sizing: border-box;
+	font-size: 2em;
 	font-family: "Trebuchet MS", "Verdana", sans-serif;
 	font-weight: bold;
-	text-shadow: #000000 0px 1px 6px;
-	padding: 0;
-	margin: 0 1em 0 0;
+	text-shadow: #000000 0 1px 6px;
+	padding: calc(20px - 1rem) 0 0 calc(146px - 0.5rem);
+	margin: 0 0 0.5rem 0;
+	background: url('home.jpg') no-repeat calc(20px - 1rem) calc(20px - 1rem);
+	min-height: 126px;
 }
 
 /* Main content */
-#body {
-	min-width: 500px;
-	margin: 0 15px 0 15px;
-	padding: 0;	
-}
 
 div.box {
-	margin: 0 0 1em 0;
-	padding: 0.7em;
-	-moz-border-radius: 1em;
-	-webkit-border-radius: 1em;
+	margin: 0 0 1rem 0;
+	padding: 0.5rem;
+	border-radius: 1em;
 	background: #434343 url('boxbg.jpg') no-repeat 50% 0;	
-}
-
-#main-content {
-	margin: 0;
-	padding: 0;
-	width: 65%;
-	float: left;	
-}
-
-#secondary-content {
-	margin: 0 0 0 15px;
-	padding: 0;
-	width: 32%;
-	float: left;
 }
 
 #secondary-content h2 {
@@ -119,8 +97,9 @@ div.box {
 
 /* Footer */
 #footer {
+	/* layout */
 	clear: both;
-	margin: 20px 15px 10px 15px;
+	margin: 2rem 0 1rem 0;
 	padding: 5px 0 0 0;
 	border-top: 1px solid #b6e4ff;
 }
@@ -129,7 +108,7 @@ div.box {
 	font-size: 0.7em;	
 }
 
-p.twidnet {
+.twidnet {
 	text-align: right;
 	width: 150px;
 	float: right;
@@ -137,7 +116,7 @@ p.twidnet {
 	padding: 0;	
 }
 
-p.twidnet a {
+.twidnet a {
 	display: block;
 	margin: 0;
 	padding: 12px 55px 0 0;
@@ -149,49 +128,148 @@ p.twidnet a {
 
 
 /* Nav links */
-ul#navigation {
-	position: absolute;
-	top: 20px;
-	left: 20px;
-	width: 120px;
+#navigation {
+	/* layout */
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
 	list-style-type: none;
 	padding: 0;
-	margin: 0;
+	margin: 0 0 1rem;
 }
 
-ul#navigation li {
+#navigation li {
 	display: block;
+	box-sizing: border-box;
+	width: calc(50% - 0.5rem);
 	padding: 0;
-	margin: 0 0 0.5em 0;
+	margin: 0.5rem 0;
+	text-align: center;
 }
 
-ul#navigation a, ul#navigation span {
+#navigation a,
+#navigation span {
 	display: block;
-	padding: 2px 2px 2px 6px;
+	padding: 2px 0.5rem;
 	margin: 0;
 	text-decoration: none;
 	font-size: 1.5em;
 	font-family: "Trebuchet MS", "Verdana", sans-serif;
-	text-shadow: #000000 0px 1px 6px;
+	text-shadow: #000000 0 1px 6px;
 }
 
-ul#navigation a, ul#navigation a:visited {
+#navigation a,
+#navigation a:visited {
 	color: #b6e4ff;
 	border-bottom: 2px dotted #b6e4ff;
 }
 
-ul#navigation a:hover, ul#navigation a:active {
+#navigation a:hover,
+#navigation a:active {
 	color: #ffffff;
 	border-bottom: 2px dotted #ffffff;
 }
 
-ul#navigation span {
+#navigation span {
 	color: #ffffff;
 	border-bottom: 2px solid #b6e4ff;
 }
 
 
-ul#navigation .home {
-	background: url('home.jpg') no-repeat top left;
-	padding-top: 126px;
+/* Fancy link lists */
+.social,
+#main-content .galleries {
+	margin-bottom: 0;
+}
+
+.social li,
+#main-content .galleries li {
+	display: block;
+	padding: 0;
+	margin: 0 0 1em 0;
+}
+
+
+@media screen and (min-width: 550px) {
+
+	/* Navigation */
+	#navigation li {
+		width: calc((100% - 3rem) / 4);
+	}
+
+	/* Fancy link lists */
+	.social,
+	#main-content .galleries {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	.social li,
+	#main-content .galleries li {
+		width: calc(50% - 0.5rem);
+	}
+}
+
+
+
+@media screen and (min-width: 800px) {
+
+	/* HEADER */
+	#header h1 {
+		font-size: 2.5em;
+		padding-top: 60px;
+	}
+
+
+	/* Main content */
+	#main-content {
+		width: 65%;
+		float: left;
+	}
+
+	#secondary-content {
+		width: calc(35% - 1rem);
+		float: right;
+	}
+
+}
+
+@media screen and (min-width: 960px) {
+
+	body {
+		padding-left: calc(160px - 1rem);
+	}
+
+	/* HEADER */
+	#header {
+		margin: 0 0 40px 0;
+	}
+
+	#header h1 {
+		padding-left: 0;
+		background: none;
+		min-height: inherit;
+	}
+
+	/* Navigation */
+	#navigation {
+		position: absolute;
+		display: block;
+		top: 20px;
+		left: 20px;
+		width: 120px;
+	}
+
+	#navigation li {
+		width: 100%;
+		margin: 0 0 1rem 0;
+		text-align: left;
+	}
+
+	#navigation .home {
+		background: url('home.jpg') no-repeat top left;
+		padding-top: 126px;
+	}
+
 }
