--- a/src/site/robots.njk
+++ b/src/site/robots.njk
@@ -14,6 +14,9 @@ Disallow: /death_of_the_pixel/
 
 User-agent: *
 Disallow: /
+
+User-agent: www.deadlinkchecker.com
+Disallow:
 {%- endif %}
 
 Sitemap: {{ site.url }}/sitemap.xml
