--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -42,7 +42,7 @@ eleventyNavigation:
 	</div>
 	<div class="box">
 		<h2>About James Nash's site</h2>
-		<p>The page and design you see before you now are the first major re-design of this site since it launched in 2002. I lovingly hand-coded all the <a href="http://www.w3.org/TR/xhtml1/">XHTML</a> and <a href="http://www.w3.org/TR/CSS2/">CSS</a> as well as the back-end <a href="http://www.php.net/">PHP</a> code in <a href="http://beforedawnsolutions.com/skedit/">skEdit</a> myself (none of this WYSIWYG rubbish!). I made all the graphics in <a href="https://www.gimp.org/">GIMP</a>. The site runs on <a href="http://event-horizon.cyberfinity.net/">my own webserver</a> (<a href="http://www.apache.org/">Apache</a> on <a href="https://www.kernel.org/">Linux</a>, naturally!) which I built and configured myself too. I think it's therefore fair to say this really is <em>my</em> personal site through and through! :-)</p>
+		<p>The page and design you see before you now are the first major re-design of this site since it launched in 2002. I lovingly hand-coded all the <a href="http://www.w3.org/TR/xhtml1/">XHTML</a> and <a href="http://www.w3.org/TR/CSS2/">CSS</a> as well as the back-end <a href="http://www.php.net/">PHP</a> code in <a href="http://beforedawnsolutions.com/skedit/">skEdit</a> myself (none of this WYSIWYG rubbish!). I made all the graphics in <a href="https://www.gimp.org/">GIMP</a>. The site runs on <a href="http://event-horizon.cyberfinity.net/">my own webserver</a> (<a href="https://www.apache.org/">Apache</a> on <a href="https://www.kernel.org/">Linux</a>, naturally!) which I built and configured myself too. I think it's therefore fair to say this really is <em>my</em> personal site through and through! :-)</p>
 		<p>Admittedly the site is still a bit light on functionality and content but I intend to improve it over time. A proper <a href="/blog/">blog</a> of my own will be next hopefully. After that, perhaps a more sophisticated <a href="/art/">picture gallery</a>? We'll see...</p>
 		<p>In the mean time, why don't you go ahead and bookmark this site so you can check by once in a while? Hope to see you here again soon!</p>
 	</div>
@@ -66,7 +66,7 @@ eleventyNavigation:
 		<ul id="badges">
 			<li><a href="/foaf.rdf" title="James Nash's FOAF file" id="foaf" class="small-button"><span>James Nash's FOAF file</span></a> (<a href="http://www.foaf-project.org/" title="What is the FOAF Project?">?</a>)</li>
 			<li><a href="http://gmpg.org/xfn/" title="This site is XFN Friendly" class="small-button" id="xfn"><span>XFN Friendly</span></a></li>
-			<li><a href="http://validator.w3.org/check?uri=referer" title="This page is valid XHTML" class="small-button" id="valid-xhtml"><span>Valid XHTML 1.0</span></a></li>
+			<li><a href="https://validator.w3.org/check?uri=referer" title="This page is valid XHTML" class="small-button" id="valid-xhtml"><span>Valid XHTML 1.0</span></a></li>
 		</ul>
 		<p class="break geekcode"><span>-----BEGIN <a href="https://en.wikipedia.org/wiki/Geek_Code">GEEK CODE</a> BLOCK-----</span><br />
 Version: 3.1<br />
