--- a/src/assets/style/screen.css
+++ b/src/assets/style/screen.css
@@ -15,16 +15,16 @@ p {
 
 ul, ol, dl {
 	margin: 0 0 0.5em 0;
-	padding: 0;	
+	padding: 0;
 }
 
 li {
 	margin: 0 0 0.7em 3em;
-	padding: 0;	
+	padding: 0;
 }
 
 p, li {
-	line-height: 1.4em;	
+	line-height: 1.4em;
 }
 
 h2 {
@@ -34,7 +34,7 @@ h2 {
 	text-shadow: #000000 0 1px 6px;
 	padding: 0 0 0.1em 0;
 	margin: 0 0 0.3em 0;
-	border-bottom: 1px solid #b6e4ff;	
+	border-bottom: 1px solid #b6e4ff;
 }
 
 h3 {
@@ -44,7 +44,7 @@ h3 {
 	text-shadow: #000000 0 1px 6px;
 	padding: 0 0 0.1em 0;
 	margin: 0 0 0.3em 0;
-	border-bottom: 1px dotted #b6e4ff;	
+	border-bottom: 1px dotted #b6e4ff;
 }
 
 a {
@@ -56,26 +56,30 @@ a:visited {
 }
 
 a:hover, a:active {
-	color: #ffffff;	
+	color: #ffffff;
 }
 
 
 .break {
-	clear: both;	
+	clear: both;
 }
 
 
 /* Header */
+#header .page-title {
+  box-sizing: border-box;
+  text-shadow: #000000 0 1px 6px;
+	padding: calc(20px - 1rem) 0 0 calc(146px - 0.5rem);
+	margin: 0 0 0.5rem 0;
+  background: url('home.jpg') no-repeat calc(20px - 1rem) calc(20px - 1rem);
+	min-height: 126px;
+}
+
 #header h1 {
-	box-sizing: border-box;
+	margin: 0;
 	font-size: 2em;
 	font-family: "Trebuchet MS", "Verdana", sans-serif;
 	font-weight: bold;
-	text-shadow: #000000 0 1px 6px;
-	padding: calc(20px - 1rem) 0 0 calc(146px - 0.5rem);
-	margin: 0 0 0.5rem 0;
-	background: url('home.jpg') no-repeat calc(20px - 1rem) calc(20px - 1rem);
-	min-height: 126px;
 }
 
 /* Main content */
@@ -84,7 +88,7 @@ div.box {
 	margin: 0 0 1rem 0;
 	padding: 0.5rem;
 	border-radius: 1em;
-	background: #434343 url('boxbg.jpg') no-repeat 50% 0;	
+	background: #434343 url('boxbg.jpg') no-repeat 50% 0;
 }
 
 #secondary-content h2 {
@@ -105,7 +109,7 @@ div.box {
 }
 
 #footer p {
-	font-size: 0.7em;	
+	font-size: 0.7em;
 }
 
 .twidnet {
@@ -113,7 +117,7 @@ div.box {
 	width: 150px;
 	float: right;
 	margin: 0 0 1em 1em;
-	padding: 0;	
+	padding: 0;
 }
 
 .twidnet a {
@@ -190,6 +194,120 @@ div.box {
 }
 
 
+/* Blog post content */
+.post img {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto 1em;
+}
+
+/* Links with button-like appearance */
+.big-link {
+  display: block;
+  padding: 0.25rem;
+  margin: 1rem 0;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  background-color: #424242;
+}
+
+span.big-link {
+  color: #aaa;
+}
+
+
+/* Individual archive nav link */
+.archive-nav-link__dirLabel,
+.archive-nav-link__label {
+  display: block;
+}
+
+.archive-nav-link__dirLabel {
+  font-size: 0.7em;
+}
+
+
+/* Archive navigation links */
+.archive-nav {
+  margin: 0 0 1rem -1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.archive-nav > * {
+  flex-grow: 1;
+  margin: 1rem 0 0 1rem;
+}
+
+.archive-nav__up {
+  width: 100%;
+  text-align: center;
+}
+
+.archive-nav__backwards,
+.archive-nav__forwards {
+  flex-basis: calc(50% - 1rem);
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.archive-nav__backwards > *,
+.archive-nav__forwards > * {
+  position: relative;
+  flex-grow: 1;
+  margin: 1rem 0 0 1rem;
+}
+
+.archive-nav__backwards {
+  flex-direction: column-reverse;
+}
+
+.archive-nav__backwards .archive-nav-link {
+  padding-left: 2rem;
+}
+
+.archive-nav__forwards {
+  text-align: right;
+}
+
+.archive-nav__forwards .archive-nav-link {
+  padding-right: 2rem;
+}
+
+.archive-nav__backwards .archive-nav-link::before,
+.archive-nav__forwards .archive-nav-link::after {
+  display: block;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.archive-nav__prev::before {
+  content: '<';
+  left: 0.25rem;
+}
+
+.archive-nav__first::before {
+  content: '<<';
+  left: 0.25rem;
+}
+
+.archive-nav__next::after {
+  content: '>';
+  right: 0.25rem;
+}
+
+.archive-nav__last::after {
+  content: '>>';
+  right: 0.25rem;
+}
+
+
+
 @media screen and (min-width: 550px) {
 
 	/* Navigation */
@@ -215,10 +333,13 @@ div.box {
 
 @media screen and (min-width: 800px) {
 
-	/* HEADER */
+  /* HEADER */
+  #header .page-title {
+		padding-top: 60px;
+  }
+
 	#header h1 {
 		font-size: 2.5em;
-		padding-top: 60px;
 	}
 
 
@@ -246,7 +367,7 @@ div.box {
 		margin: 0 0 40px 0;
 	}
 
-	#header h1 {
+	#header .page-title {
 		padding-left: 0;
 		background: none;
 		min-height: inherit;
