--- a/src/site/_templates/page.njk
+++ b/src/site/_templates/page.njk
@@ -22,7 +22,10 @@
 	</head>
 	<body>
 		<div id="header">
-			<h1>{{ title }}</h1>
+      <div class="page-title">
+        <h1>{{ title }}</h1>
+        {% block subTitle %}{% endblock %}
+      </div>
 		</div>
     {%- set navPages = collections.all | eleventyNavigation %}
     {{- mainNav(navPages, page.url) | safe }}
