feat: improves sitemap.xml

--- a/src/site/art/index.njk
+++ b/src/site/art/index.njk
@@ -14,6 +14,7 @@ eleventyNavigation:
   key: Art
   order: 3
   titleAttr: Artwork by James Nash
+changeFreq: monthly
 ---
 {%- from 'partials/gallery-list.njk' import galleryList -%}
 <div id="main-content">
