--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -17,6 +17,8 @@ eleventyNavigation:
   key: Home
   order: 1
   titleAttr: James Nash - arty phone geek
+priority: 1
+changeFreq: weekly
 ---
 <div id="main-content">
 	<div class="box">
