--- a/src/site/links/index.njk
+++ b/src/site/links/index.njk
@@ -14,6 +14,8 @@ eleventyNavigation:
   key: Links
   order: 4
   titleAttr: James Nash's Links
+priority: 0.5
+changeFreq: monthly
 ---
 <div class="box">
 	<h2>Link love</h2>
