--- a/src/site/_templates/partials/blog-post-link.njk
+++ b/src/site/_templates/partials/blog-post-link.njk
@@ -1,4 +1,5 @@
 {% macro blogPostLink(blogPost) %}
   <strong><a href="{{ blogPost.url }}">{{ blogPost.data.title }}</a></strong>
-  <p>Posted on {% humanDate blogPost.date %}</p>
+  <p><small>Posted on {% humanDate blogPost.date %}</small></p>
+  <p>{{ blogPost.data.summary }}
 {% endmacro %}
