--- a/src/site/blog/index.njk
+++ b/src/site/blog/index.njk
@@ -3,6 +3,9 @@ layout: page.njk
 title: James Nash on the Blog
 description: Blog posts by James Nash. Mostly musings and ramblings about mobile phone technology.
 keywords:
+  - blog
+  - articles
+  - writing
   - feed
   - twitter
   - mobile
