--- a/src/site/blog/index.njk
+++ b/src/site/blog/index.njk
@@ -25,6 +25,7 @@ priority: 1
 changeFreq: daily
 permalink: "blog/{% if pagination.pageNumber > 0 %}page-{{ pagination.pageNumber + 1 }}/{% endif %}"
 ---
+{% from 'partials/blog-post-link.njk' import blogPostLink %}
 {% from 'partials/archive-nav.njk' import archiveNav %}
 {% set firstPage = {
   url: pagination.href.first if (pagination.href.first != page.url),
@@ -44,21 +45,22 @@ permalink: "blog/{% if pagination.pageNumber > 0 %}page-{{ pagination.pageNumber
 } %}
 
 <div id="main-content">
-{% for blogPost in blogPosts %}
   <div class="box">
-    <h2><a href="{{ blogPost.url }}">{{ blogPost.data.title }}</a></h2>
-    <p>Posted on {% humanDate blogPost.date %}</p>
+    <h2>
+      {% if pagination.pageNumber == 0 %}
+        Most recent blog posts
+      {% else %}
+        Page {{ pagination.pageNumber + 1 }} of older blog posts
+      {% endif %}
+    </h2>
+    <ul class="post-links">
+    {% for blogPost in blogPosts %}
+      <li>{{ blogPostLink(blogPost) | safe }}</li>
+    {% endfor %}
+    </ul>
   </div>
-{% endfor %}
-</div>
 
-<div id="secondary-content">
-  <div class="box">
-    <h2>Browse the blog</h2>
-    <p>You are on page {{ pagination.pageNumber + 1 }} of {{ pagination.pages.length }}</p>
-    {{ archiveNav(null, firstPage, prevPage, nextPage, lastPage) | safe }}
-  </div>
-
+  {% if pagination.pageNumber == 0 %}
   <div class="box">
     <h2>Elsewhere</h2>
     <p>I have also blogged elsewhere over the years:</p>
@@ -80,5 +82,14 @@ permalink: "blog/{% if pagination.pageNumber > 0 %}page-{{ pagination.pageNumber
             </ul>
         </li>
     </ul>
+  </div>
+  {% endif %}
+</div>
+
+<div id="secondary-content">
+  <div class="box">
+    <h2>Browse the blog</h2>
+    <p>You are on page {{ pagination.pageNumber + 1 }} of {{ pagination.pages.length }}</p>
+    {{ archiveNav(null, firstPage, prevPage, nextPage, lastPage) | safe }}
   </div>
 </div>
