--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -55,9 +55,9 @@ changeFreq: weekly
 	</div>
 	<div class="box">
 		<h2>About James Nash's site</h2>
-		<p>The page and design you see before you now are the first major re-design of this site since it launched in 2002. I lovingly hand-coded all the <a href="http://www.w3.org/TR/xhtml1/">XHTML</a> and <a href="http://www.w3.org/TR/CSS2/">CSS</a> as well as the back-end <a href="http://www.php.net/">PHP</a> code in <a href="http://beforedawnsolutions.com/skedit/">skEdit</a> myself (none of this WYSIWYG rubbish!). I made all the graphics in <a href="https://www.gimp.org/">GIMP</a>. The site runs on <a href="http://event-horizon.cyberfinity.net/">my own webserver</a> (<a href="https://www.apache.org/">Apache</a> on <a href="https://www.kernel.org/">Linux</a>, naturally!) which I built and configured myself too. I think it's therefore fair to say this really is <em>my</em> personal site through and through! :-)</p>
-		<p>Admittedly the site is still a bit light on functionality and content but I intend to improve it over time. A proper <a href="/blog/">blog</a> of my own will be next hopefully. After that, perhaps a more sophisticated <a href="/art/">picture gallery</a>? We'll see...</p>
-		<p>In the mean time, why don't you go ahead and bookmark this site so you can check by once in a while? Hope to see you here again soon!</p>
+		<p>The design you see before you now was released in 2009. It was the first major re-design of this site since this website launched in 2002. I lovingly hand-coded all the <a href="http://www.w3.org/TR/xhtml1/">XHTML</a> and <a href="http://www.w3.org/TR/CSS2/">CSS</a>. All the graphicswere made in <a href="https://www.gimp.org/">GIMP</a>.</p>
+    <p>Originally, there was (very simple) a back-end written in <a href="http://www.php.net/">PHP</a> and it was all hosted on <a href="http://event-horizon.cyberfinity.net/">my own webserver</a> . However, as of June 2020 that setup has been replaced with an <a href="https://www.11ty.dev/">11ty</a>-powered static site build that gets deployed via <a href="https://www.netlify.com/">Netlify</a>.</p>
+    <p>
 	</div>
 </div>
 <div id="secondary-content">
