fix: styling of day archive pages

--- a/src/site/_templates/blog-archive-page.njk
+++ b/src/site/_templates/blog-archive-page.njk
@@ -45,7 +45,7 @@
   {% else %}
     {# No groups, means we just have posts directly #}
     <div class="box">
-      <ul>
+      <ul class="post-links">
       {% for post in blogPosts.posts %}
         <li>{{ blogPostLink(post) }}</li>
       {% endfor %}
