feat: prevents paginated pages from being indexed

--- a/src/site/_templates/page.njk
+++ b/src/site/_templates/page.njk
@@ -21,6 +21,9 @@
     {%- if canonicalUrl %}
     <link rel="canonical" href="{{ canonicalUrl }}" />
     {%- endif %}
+    {%- if robots.nofollow or robots.noindex %}
+    <meta name="robots" content="{{ 'nofollow' if robots.nofollow }}{{ ', ' if (robots.nofollow and robots.noindex) }}{{ 'noindex' if robots.noindex }}">
+    {%- endif %}
   {%- endblock %}
 	</head>
 	<body>
