feat: updated work section

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -45,7 +45,7 @@ changeFreq: weekly
   </div>
 	<div class="box">
 		<h2>James Nash on the social intertubes</h2>
-		<p>Find me, follow me and poke me on...</p>
+		<p>Find me, follow me on...</p>
 		<ul class="social">
 			<li><a href="https://twitter.com/c1rrus" id="twitter" rel="me">Follow James Nash on Twitter</a></li>
 			<li><a href="https://www.flickr.com/photos/james_nash/" id="flickr" rel="me">James Nash's Flickr Photo Stream</a></li>
@@ -63,9 +63,9 @@ changeFreq: weekly
 <div id="secondary-content">
 	<div class="box">
 		<h2>James Nash's Work</h2>
-		<p>I am a Creative Technologist for a large consultancy firm. I live at the intersection of UX and technology and help people from each of those disciplines better collaborate. Over the past few years I have focussed a lot of my efforts on design systems as I see them as a major facilitator for such collaboration and also a means to level-up the quality of UX across all of an organisation's products.</p>
-		<p>Prior to that, I was a UX consultant for 3 years and a mobile software developer for over 6 years (yes, I really am a <em>phone geek</em>!). I therefore like to think I know a thing or two about mobile software, operating systems and the industry in general. However, <strong>unless clearly stated otherwise</strong>, everything I say and write on this site and elsewhere online is my own, <em>personal</em> opinion and <strong>in no way represents the views of my employer</strong>!</p>
-		<p>For other professional networking, please check out my: <a href="https://www.linkedin.com/in/jamescnash" id="linkedin" rel="me">LinkedIn profile.</a> Please note that I usually only accept people as a new contact if I've actually met them in real life!</p>
+    <p>I currently work in a design system team at a large investment bank. Previously I was a creative technologist for a large consultancy firm, a UX consultant and a mobile software developer. I live at the intersection of UX and technology and help people from each of those disciplines better collaborate.</p>
+    <p><strong>Unless clearly stated otherwise</strong>, everything I say and write on this site and elsewhere online is my own, <em>personal</em> opinion and <strong>in no way represents the views of my past or present employers</strong>!</p>
+		<p>To network professionally, please check out my: <a href="https://www.linkedin.com/in/jamescnash" id="linkedin" rel="me">LinkedIn profile.</a> Please note that I usually only accept people as a new contact if I've actually met them in real life!</p>
 		<h3>Shameless book plug</h3>
 		<p>By the way, on the (increasingly unlikely) off chance that you're into developing multimedia apps for Symbian you may find this book useful:</p>
 		<ul>
