--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -47,8 +47,8 @@ changeFreq: weekly
 		<h2>James Nash on the social intertubes</h2>
 		<p>Find me, follow me on...</p>
 		<ul class="social">
+      <li><a href="https://mstdn.social/@cirrus" id="mastodon" rel="me">Follow James Nash on Mastodon</a></li>
 			<li><a href="https://twitter.com/c1rrus" id="twitter" rel="me">Follow James Nash on Twitter</a></li>
-			<li><a href="https://www.flickr.com/photos/james_nash/" id="flickr" rel="me">James Nash's Flickr Photo Stream</a></li>
 		</ul>
 		<p class="break">Please note that I probably won't follow / add / whatever you back automatically unless I actually know you from <a href="http://catb.org/jargon/html/M/meatspace.html">meatspace</a>! Call me old-skool if you like, but I don't want every Tom, Dick and Harry seeing photos of me on a night out! :-P</p>
 		<p>Oh yeah, incase you're wondering, I've not bothered with MySpace since I have a perfectly good "space" here (and one that doesn't look like someone barfed all over your browser either)!</p>
