--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -48,6 +48,7 @@ changeFreq: weekly
 		<p>Find me, follow me on...</p>
 		<ul class="social">
       <li><a href="https://mstdn.social/@cirrus" id="mastodon" rel="me">Follow James Nash on Mastodon</a></li>
+      <li><a href="/feed.atom" id="feed">Subscribe to my blog in your favourite RSS reader</a></li>
 		</ul>
 		<p class="break">Please note that I probably won't follow / add / whatever you back automatically unless I actually know you from <a href="http://catb.org/jargon/html/M/meatspace.html">meatspace</a>! Call me old-skool if you like, but I don't want every Tom, Dick and Harry seeing photos of me on a night out! :-P</p>
 		<p>Oh yeah, incase you're wondering, I've not bothered with MySpace since I have a perfectly good "space" here (and one that doesn't look like someone barfed all over your browser either)!</p>
