--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -1,10 +1,13 @@
 ---
-layout: page.njk
-title: James Nash - arty phone geek
+layout: homepage.njk
+title: Cirrus's Realm
+customTitle: "Cirrus's Realm: James Nash's personal website"
 additionalCss: home.css
-description: Personal site of James Nash - the arty phone geek. Includes artwork and a blog by James Nash.
+description: "Personal site and blog of James Nash. Design system nerd, classically trained webmaster and occasional fashion terrorist."
 keywords:
   - art
+  - design systems
+  - design tokens
   - blog
   - mobile
   - phone
