removed defunct twiddles network stuff & fixed up some links

--- a/src/site/links/index.njk
+++ b/src/site/links/index.njk
@@ -22,7 +22,7 @@ changeFreq: monthly
 	<p>Here's a random selection of links of things I have done or am involved in:</p>
 	<ul>
 		<li><a href="https://udt.design/">Universal Design Tokens</a> - a project I started in 2018 with the goal of defining a standard file format for exchanging design tokens.</li>
-		<li><a href="http://www.twiddles.com/">Twiddles</a> - <q>Coming soon</q>, honest guv'!</li>
+		<li><a href="https://www.twiddles.com/">Twiddles</a> - <q>Coming soon</q>, honest guv'!</li>
 		<li><a href="https://shop.spreadshirt.co.uk/twiddles/">The official Twiddles shop</a>!</li>
 		<li><a href="http://adonthell.nongnu.org/">Adonthell</a>. A cool, open-source RPG adventure game.</li>
 	</ul>
