--- a/src/assets/style/screen.css
+++ b/src/assets/style/screen.css
@@ -3,7 +3,7 @@ body {
 	background: #424242 url('bg.jpg') no-repeat top left;
 	margin: 1rem;
 	padding: 0;
-	font-family: "Verdana", "Arial", sans-serif;
+	font-family: ui-sans-serif, system-ui, sans-serif;
 	color: #ffffff;
 }
 
